overflow fix for mobile devices

--- a/style.css
+++ b/style.css
@@ -3,35 +3,45 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     background: linear-gradient(120deg, #0901ff, #fe0202);
-    margin: 0;
     overflow: hidden;
     background-repeat: no-repeat;
 }
 
+
 .flashcard-container{
-    background-color: #ffffffe0;
-    padding: 40px;
-    border-radius: 20px;
-    box-shadow: 0 0px 15px rgba(0, 0, 0, 0.1);
-    max-width: 360px;
+    background-color: #fdf7f7ea;
+    padding: 15px;
+    border-radius: 15px;
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.1);
+    min-width: 360px;
     text-align: center;
     margin-bottom: 60px;
 }
-
+.flashcard-container h1{
+    font-size: 1.5rem;
+}
 .flashcard{
-    width: 90%;
+    max-width: 100;
     min-height: 180px;
     position: relative;
     transform-style: preserve-3d;
     transition: transform 0.5s;
     margin: 0 auto;
     cursor: pointer;
+    font-size: 1rem;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    text-align: center;
 }
 
 .flashcard.is-flipped{
     transform: rotateY(180deg);
+    max-width: 100%;
+    text-align: center;
+    align-items: center;
 }
 
 .flashcard div{
@@ -44,35 +54,29 @@ body{
     overflow: auto;
     scrollbar-width: none;
     margin: 0 auto;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(120deg, #b7b6c3, #554949);
+    background: linear-gradient(145deg, #b7b6c3, #554949);
 }
 
 .back{
     transform: rotateY(180deg);
-    display: flex;
 }
 
 .front{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     color: #ffffff;
 }
 
-.flashcard p {
-    font-size: 1rem;
+/* .flashcard p{
+    a
     width: 100%;
     height: 99px;
     overflow-x: none;
     display: flex;
-    text-wrap: wrap;
-    text-align: center;
     margin: 0 auto;
     margin-top: 0;
-}
+} */
+
+
 
 .controls{
     margin-top: 10px;
@@ -94,7 +98,7 @@ body{
     transform: scale(1.2);
 }
 
-@media (max-width: 800px) {
+@media (max-width: 75vw) {
     .flashcard-container{
         width: 75%;
     }
